# core-log-engine

./: CHANGELOG.md  README.md  justfile  pyproject.toml  rcloneignore.txt  ruff.toml
.github/workflows/: cd.yaml  ci.yaml  format.yaml  lint.yaml  main.yaml  pip-publish.yaml  test.yaml  version.yaml
docs/: AppLogger.html  docs.html
src/CapsuleCore_logger/capsule/: __init__.py
src/core_log_engine/: __init__.py  util.py
tests/: test_AppLogger.py  test_ConsoleLogger.py  test_Logger.py  test_NullLogger.py  test_SpecificLevelFilter.py
