[project]
name = "CapsuleCore_logger"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitchangelog>=3.0.4",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"] # O setuptools, el que prefieras
build-backend = "hatchling.build"
