[project]
name = "cc.logger-kit"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitchangelog>=3.0.4",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"
